--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,13 @@ uuid = "3325e504-959d-4fe7-9c36-4d706b0773ee"
 authors = ["Marcus Webb <marcusdavidwebb@gmail.com> and contributors"]
 version = "0.1.0"
 
+[deps]
+ApproxFun = "28f2ccd6-bb30-5033-b560-165f7b14dc2f"
+FastGaussQuadrature = "442a2c76-b920-505d-bb47-c5924d526838"
+FastTransforms = "057dd010-8810-581a-b7be-e3fc3b93f78c"
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
+
 [compat]
 julia = "1"
 
